Move models to the root directory

--- a/notebooks/fashion-mnist.ipynb
+++ b/notebooks/fashion-mnist.ipynb
@@ -353,25 +353,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved PyTorch Model State to models/fashion-mnist.pth\n"
+      "Saved PyTorch Model State to ../models/fashion-mnist.pth\n"
      ]
     }
    ],
    "source": [
-    "torch.save(model.state_dict(), \"models/fashion-mnist.pth\")\n",
-    "print(\"Saved PyTorch Model State to models/fashion-mnist.pth\")"
+    "torch.save(model.state_dict(), \"../models/fashion-mnist.pth\")\n",
+    "print(\"Saved PyTorch Model State to ../models/fashion-mnist.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -380,19 +380,19 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = NeuralNetwork().to(device)\n",
-    "model.load_state_dict(torch.load(\"models/fashion-mnist.pth\"))"
+    "model.load_state_dict(torch.load(\"../models/fashion-mnist.pth\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
