--- a/notebooks/fashion-mnist.ipynb
+++ b/notebooks/fashion-mnist.ipynb
@@ -452,14 +452,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "layer 1 weight - Shape: torch.Size([512, 784]) - Values: Parameter containing:\n",
+      "layer 1 weight - Shape: torch.Size([512, 784]) - Parameter containing:\n",
       "tensor([[ 0.0166, -0.0215, -0.0213,  ...,  0.0249, -0.0333,  0.0195],\n",
       "        [ 0.0019,  0.0064, -0.0097,  ..., -0.0314,  0.0137, -0.0085],\n",
       "        [-0.0215, -0.0111, -0.0079,  ...,  0.0136, -0.0033,  0.0346],\n",
@@ -468,7 +468,8 @@
       "        [-0.0124, -0.0270, -0.0229,  ..., -0.0219, -0.0196, -0.0023],\n",
       "        [-0.0082,  0.0086,  0.0155,  ...,  0.0073, -0.0347, -0.0143]],\n",
       "       device='cuda:0', requires_grad=True)\n",
-      "layer 1 bias - Shape: torch.Size([512]) - Values: Parameter containing:\n",
+      "\n",
+      "layer 1 bias - Shape: torch.Size([512]) - Parameter containing:\n",
       "tensor([ 2.6567e-02,  6.3177e-03,  6.0578e-03,  3.2456e-03,  4.2460e-02,\n",
       "         2.5497e-03, -7.8638e-03, -1.1674e-03,  2.7715e-02,  1.0238e-02,\n",
       "        -2.8850e-02,  2.2727e-02,  8.7578e-03, -1.7382e-02,  2.3547e-02,\n",
@@ -579,8 +580,8 @@
     "layer1_weight = model.get_parameter(\"linear_relu_stack.0.weight\")\n",
     "layer1_bias = model.get_parameter(\"linear_relu_stack.0.bias\")\n",
     "\n",
-    "print(f\"layer 1 weight - Shape: {layer1_weight.shape} - Values: {layer1_weight}\")\n",
-    "print(f\"layer 1 bias - Shape: {layer1_bias.shape} - Values: {layer1_bias}\")"
+    "print(f\"layer 1 weight - Shape: {layer1_weight.shape} - {layer1_weight}\\n\")\n",
+    "print(f\"layer 1 bias - Shape: {layer1_bias.shape} - {layer1_bias}\")"
    ]
   },
   {
