Download and deflate layer 1 weight

--- a/notebooks/fashion-mnist.ipynb
+++ b/notebooks/fashion-mnist.ipynb
@@ -734,11 +734,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with torch.no_grad():\n",
-    "  weights = layer1_weight.numpy()\n",
-    "  weights.tofile(\"../models/fashion-mnist/layer1-weight.bin\")\n",
-    "  with gzip.GzipFile(\"../models/fashion-mnist/layer1-weight.gz\", mode=\"wb\") as f:\n",
-    "    f.write(weights.tobytes())"
+    "with (\n",
+    "  torch.no_grad(),\n",
+    "  gzip.GzipFile(\"../models/fashion-mnist/layer1-weight.gz\", mode=\"wb\") as f\n",
+    "):\n",
+    "    f.write(layer1_weight.numpy().tobytes())"
    ]
   }
  ],
