Export layer 1 bias

--- a/notebooks/fashion-mnist.ipynb
+++ b/notebooks/fashion-mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets\n",
     "from torchvision.transforms import ToTensor\n",
+    "from torchvision.utils import save_image\n",
     "import matplotlib.pyplot as plt\n",
     "import gzip"
    ]
@@ -401,6 +402,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_image(x, \"../data/fashion-mnist/0.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [
@@ -730,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,6 +749,19 @@
     "  gzip.GzipFile(\"../models/fashion-mnist/layer1-weight.gz\", mode=\"wb\") as f\n",
     "):\n",
     "    f.write(layer1_weight.numpy().tobytes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with (\n",
+    "  torch.no_grad(),\n",
+    "  gzip.GzipFile(\"../models/fashion-mnist/layer1-bias.gz\", mode=\"wb\") as f\n",
+    "):\n",
+    "    f.write(layer1_bias.numpy().tobytes())"
    ]
   }
  ],
