Design textures layout revamp

--- a/notebooks/fashion-mnist.ipynb
+++ b/notebooks/fashion-mnist.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -411,20 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of input image: torch.Size([1, 28, 28])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Shape of input image: torch.Size([1, 28, 28])\n",
       "Input image center: tensor([[[0.0000, 0.0000, 0.4510, 0.4471],\n",
       "         [0.0000, 0.3490, 0.5451, 0.3529],\n",
       "         [0.3843, 0.5333, 0.4314, 0.4275],\n",
@@ -439,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +746,7 @@
    "source": [
     "with (\n",
     "  torch.no_grad(),\n",
-    "  gzip.GzipFile(\"../models/fashion-mnist/layer0-weight.gz\", mode=\"wb\") as f\n",
+    "  gzip.GzipFile(\"../models/fashion-mnist/0-weight.gz\", mode=\"wb\") as f\n",
     "):\n",
     "    f.write(layer0_weight.cpu().numpy().tobytes())"
    ]
@@ -765,14 +759,14 @@
    "source": [
     "with (\n",
     "  torch.no_grad(),\n",
-    "  gzip.GzipFile(\"../models/fashion-mnist/layer0-bias.gz\", mode=\"wb\") as f\n",
+    "  gzip.GzipFile(\"../models/fashion-mnist/0-bias.gz\", mode=\"wb\") as f\n",
     "):\n",
     "    f.write(layer0_bias.cpu().numpy().tobytes())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1137,7 @@
    "source": [
     "with (\n",
     "  torch.no_grad(),\n",
-    "  gzip.GzipFile(\"../models/fashion-mnist/layer2-weight.gz\", mode=\"wb\") as f\n",
+    "  gzip.GzipFile(\"../models/fashion-mnist/2-weight.gz\", mode=\"wb\") as f\n",
     "):\n",
     "    f.write(layer2_weight.cpu().numpy().tobytes())"
    ]
@@ -1156,14 +1150,14 @@
    "source": [
     "with (\n",
     "  torch.no_grad(),\n",
-    "  gzip.GzipFile(\"../models/fashion-mnist/layer2-bias.gz\", mode=\"wb\") as f\n",
+    "  gzip.GzipFile(\"../models/fashion-mnist/2-bias.gz\", mode=\"wb\") as f\n",
     "):\n",
     "    f.write(layer2_bias.cpu().numpy().tobytes())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1266,6 +1260,96 @@
     "\n",
     "print(f\"Shape of hidden 3: {hidden3.shape}\")\n",
     "print(f\"Hidden 3: {hidden3}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "layer 4 weight - Shape: torch.Size([10, 512]) - Parameter containing:\n",
+      "tensor([[-0.0078,  0.0882,  0.0149,  ..., -0.0204, -0.0397,  0.0218],\n",
+      "        [ 0.0101,  0.1217, -0.0114,  ..., -0.0185,  0.0421,  0.0109],\n",
+      "        [-0.0172, -0.0295,  0.0146,  ...,  0.0151, -0.0309, -0.0137],\n",
+      "        ...,\n",
+      "        [ 0.0016, -0.0628,  0.0303,  ...,  0.0086,  0.0134,  0.0081],\n",
+      "        [ 0.0226, -0.0875,  0.0129,  ..., -0.0326,  0.0187,  0.0264],\n",
+      "        [ 0.0371, -0.0418,  0.0161,  ..., -0.0260,  0.0421, -0.0426]],\n",
+      "       device='cuda:0', requires_grad=True)\n",
+      "\n",
+      "layer 4 bias - Shape: torch.Size([10]) - Parameter containing:\n",
+      "tensor([-0.0409, -0.0246, -0.0050,  0.0328, -0.0801,  0.1937,  0.0077,  0.0859,\n",
+      "        -0.0652, -0.0485], device='cuda:0', requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "layer4_weight = model.get_parameter(\"linear_relu_stack.4.weight\")\n",
+    "layer4_bias = model.get_parameter(\"linear_relu_stack.4.bias\")\n",
+    "\n",
+    "print(f\"layer 4 weight - Shape: {layer4_weight.shape} - {layer4_weight}\\n\")\n",
+    "print(f\"layer 4 bias - Shape: {layer4_bias.shape} - {layer4_bias}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of hidden 4: torch.Size([1, 10])\n",
+      "Hidden 4: tensor([[-2.2995, -2.1135, -1.0424, -1.6524, -0.9015,  2.4404, -1.1452,  2.6658,\n",
+      "          1.6956,  3.0893]], device='cuda:0', grad_fn=<AddmmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "layer4 = model.linear_relu_stack[4]\n",
+    "hidden4 = layer4(hidden3)\n",
+    "\n",
+    "print(f\"Shape of hidden 4: {hidden4.shape}\")\n",
+    "print(f\"Hidden 4: {hidden4}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with (\n",
+    "  torch.no_grad(),\n",
+    "  gzip.GzipFile(\"../models/fashion-mnist/4-weight.gz\", mode=\"wb\") as f\n",
+    "):\n",
+    "    f.write(layer4_weight.cpu().numpy().tobytes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with (\n",
+    "  torch.no_grad(),\n",
+    "  gzip.GzipFile(\"../models/fashion-mnist/4-bias.gz\", mode=\"wb\") as f\n",
+    "):\n",
+    "    f.write(layer4_bias.cpu().numpy().tobytes())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](fashion-mnist.png)"
    ]
   }
  ],
